--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,5 +1,5 @@
-Version 1.0 | Date YYYY-mmm-DD
-•	<Summary of new features implemented/changed>
+Version 0.1 | YYYY-mmm-DD
+ - Initial Prototype
 
 
 
